# vadimgest

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml
.claude/skills/add-source/: SKILL.md
.claude/skills/search/: SKILL.md
tests/: smoke_test.py  test_claude_syncer_enrichment.py  test_cli.py  test_codex_syncer.py  test_consumer_reader.py  test_edge_ingest.py  test_embedder.py  test_hlopya_syncer.py  test_indexer.py  test_ingest_sources.py  test_ingest_sources_extra.py  test_linkedin_syncer.py  test_manifests.py  test_memory_scoring.py  test_search_main.py  test_search_vec.py  test_slack_syncer.py  test_store.py  test_syncers.py  test_web.py  test_wizard_setup.py
vadimgest/: __init__.py  __main__.py  cli.py  config.example.yaml  config.py  daemon.py  edge.py  edge_agent.py  models.py  store.py
vadimgest/consumer/: __init__.py  reader.py
vadimgest/ingest/: __init__.py
vadimgest/ingest/sources/: __init__.py  base.py  gog_utils.py
vadimgest/ingest/sources/bee/: syncer.py
vadimgest/ingest/sources/browser/: syncer.py
vadimgest/ingest/sources/calendar/: syncer.py
vadimgest/ingest/sources/claude/: __init__.py  syncer.py
vadimgest/ingest/sources/codex/: __init__.py  syncer.py
vadimgest/ingest/sources/dayflow/: syncer.py
vadimgest/ingest/sources/gdrive/: syncer.py
vadimgest/scripts/: migrate_signal_names.py
vadimgest/search/: __init__.py  __main__.py  embedder.py  indexer.py  scoring.py  searcher.py
vadimgest/web/: app.py  autostart.py  setup.py  setup_map.py
(+17 files in other folders)
